syntax = "proto3";
option csharp_namespace = "KitchenHell.Api.Grpc.Generated.Orders";

import "google/protobuf/timestamp.proto";

service OrdersSvc {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest
{
  int64 restaurant_id = 1;
  optional google.protobuf.Timestamp createdAt = 2;
}

message CreateOrderResponse
{
  int64 order_id = 1;
}

message GetOrderRequest
{
  int64 order_id = 1;
}

message GetOrderResponse
{
  Order order = 1;  
}

message Order
{
  int64 order_id = 1;
  google.protobuf.Timestamp createdAt = 2;
}

